syntax = "proto3";

package api;

option go_package = "api/proto";

import "google/protobuf/timestamp.proto";

// Text save message
message Text {
  string id = 1;
  string name = 2;
  string data = 3;
  string meta = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// Bank card save message
message Card {
  string id = 1;
  string number = 2;
  string meta = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// File message
message FileInfo {
  string file_type = 1;
  string meta = 2;
}