syntax = "proto3";

package api;

option go_package = "api/proto";

import "user_data.proto";
import "google/api/annotations.proto";

message SaveTextRequest { Text text = 1; }

message SaveTextResponse { string id = 1; }

message SaveCardRequest { Card card = 1; }

message SaveCardResponse { string id = 1; }

message UploadFileRequest {
  oneof data {
    FileInfo info = 1;
    bytes chunk_data = 2;
  };
}

message UploadFileResponse {
  string id = 1;
  uint32 size = 2;
}


service UserDataService {
  rpc SaveText(SaveTextRequest) returns (SaveTextResponse) {
    option (google.api.http) = {
      post : "/v1/user_data/save_text"
      body : "*"
    };
  };

  rpc SaveCard(SaveCardRequest) returns (SaveCardResponse) {
    option (google.api.http) = {
      post : "/v1/user_data/save_card"
      body : "*"
    };
  };

  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {
    option (google.api.http) = {
      post : "/v1/user_data/upload_file"
      body : "*"
    };
  };
}